# zisk-fv

./: .gitignore  .gitmodules  .rgignore  AGENTS.md  CLAUDE.md  README.md  REPORT.md  STATUS.md  ZiskFv.lean  build  flake.nix  issue_deps.md  justfile  lake-manifest.json  lakefile.toml  simplification-suggestions.md
.github/: CODEOWNERS
.github/workflows/: aeneas-extraction.yml  issue-deps-graph.yml  proofs.yml  trust-gate.yml
ZiskFv/: Circuit.lean  Completeness.lean  Compliance.lean  Compliance_v1.lean  Compliance_v2.lean  Compliance_v2_ADD_RTYPEW.lean  Compliance_v2_Branch.lean  Compliance_v2_DIVU.lean  Compliance_v2_ITYPE.lean  Compliance_v2_LDSD.lean  Compliance_v2_Misc.lean  Compliance_v2_NoMemOrSimple.lean  Compliance_v2_RTYPE.lean  Compliance_v2_Remaining.lean  Compliance_v2_Shift.lean  Sanity.lean  Soundness.lean  ZiskFv.lean  lake-manifest.json  lakefile.toml
ZiskFv/Airs/: BinaryExtensionTable.lean  BinaryTable.lean  BusEmission.lean  BusHypotheses.lean  BusShape.lean  Main.lean  Mem.lean  MemAlign.lean  MemAlignByte.lean  MemAlignReadByte.lean  MemAlignWriteByte.lean  MemoryBus.lean  OpBusEffect.lean  OpBusHypotheses.lean  OperationBus.lean  README.md
ZiskFv/AirsClean/: ArithTable.lean  ArithTableProjections.lean  BinaryExtensionTable.lean  BinaryTable.lean  Completeness.lean  CompletenessHelpers.lean  FullEnsemble.lean  RangeTables.lean  ZRomSpike.lean  ZVmSpike.lean  ZiskInstructionRom.lean
ZiskFv/Bits/: Execution.lean  PackedBitVec.lean  (+2 more)
ai_plans/: finishing1.md  finishing2.md  finishing3.md  finishing4.md  finishing5.md  zisk-fv-feasibility.md  zisk-fv-metaplan.md  zisk-fv-phase-0.md  zisk-fv-phase-1.md  zisk-fv-phase-2.md  zisk-fv-phase-3.md  zisk-fv-phase-3b.md  zisk-fv-phase-4-5.md  zisk-fv-phase-4.md  zisk-fv-phase-5.md
docker/: Dockerfile.pilout  Dockerfile.sail-lean  README.md  build-pilout-inside.sh  build-pilout.sh  build-sail-lean.sh  build-zisk-lean.sh  versions.txt
docs/: clean-feedback.md  clean-fork-divergences.md  completeness-proof-pattern.md  transpiler-trust-removal-assessment.md
examples/fv-probes/add/: Cargo.toml
examples/fv-probes/add/src/: main.rs
nix/: README.md  aeneas-lean.nix  clean.nix  extracted-lean.nix  pil-extract.nix  pil2-compiler.nix  populate.nix  sail-lean-tree.nix  sail-lean-v4.28-compat.patch  sail-riscv-zisk-rv64d.json  test.nix  zisk-pilout.nix
repro/: Dockerfile.pilout  Dockerfile.sail-lean  README.md  build-pilout-inside.sh  build-pilout.sh  build-sail-lean.sh  versions.txt
scripts/: aeneas-production-extract.sh  aeneas-rv64im-extract.sh  aeneas-rv64im-lean428-compat.sh  check-aeneas-rv64im-manifest.sh  update_issue_deps_graph.py
site/: index.html  serve.sh
tools/: bundle-refactor.py  strip-dev-phase-markers.py  trust-ledger-index.py
tools/pil-extract/: Cargo.toml
tools/pil-extract/src/: arith_table.rs  clean_component.rs  main.rs
tools/zisk-fv-harness/: Cargo.toml
tools/zisk-fv-harness/src/: main.rs
trust/: README.md  aeneas-generated-bridge-manifest.txt  allowed-axiom-files.txt  arith-table-axiom-audit.md  axiom-index.md  baseline-arith-table-op-axioms.txt  baseline-axioms.txt  baseline-caller-burden.txt  baseline-equiv-axiom-deps.txt  baseline-hypothesis-count.txt  baseline-wrapper-caller-burden.txt  baseline-zisk-riscv-compliant.txt  dead-code-entry-points.txt  defects.md  div-rem-resolution-audit.md  envelope-burden-audit.md  envelope-surface-add.md  forbidden-param-shapes.txt  forbidden-types.txt  issue-101-branch-eq-closeout.md  memory-argument-obligation-map.md  op-envelope-route-constructors.txt  p4-construction-closeout.md  p4-salvage-manifest.md  structural-unpacking-exceptions.txt  theorem-keep-list.txt  tolerated-completeness-axioms.txt  transpiler-differential-pinning.md  trusted-base.md
(+1722 files in other folders)
